// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputText /> renders the component disabled 1`] = `
.c0 {
  position: relative;
}

.c1 {
  width: 100%;
  -webkit-appearance: none;
  outline: none;
  border-radius: 8px;
  height: 50px;
  padding: 0 16px;
  font-size: 15px;
  font-weight: 400;
  color: #818F9B;
  border: 1px solid #D4D7D9;
  box-shadow: 0 0 4px 0 transparent;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

.c1:focus {
  border: 1px solid #00D9C5;
  box-shadow: 0 0 4px 0 #00D9C5;
}

.c1::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1:disabled {
  background-color: transparent;
  cursor: not-allowed;
}

<div
  class="c0"
>
  <input
    class="c1"
    disabled=""
    name="name"
  />
</div>
`;

exports[`<InputText /> renders the component with error 1`] = `
.c0 {
  position: relative;
}

.c1 {
  width: 100%;
  -webkit-appearance: none;
  outline: none;
  border-radius: 8px;
  height: 50px;
  padding: 0 16px;
  font-size: 15px;
  font-weight: 400;
  color: #4A545E;
  border: 1px solid #FF4539;
  box-shadow: 0 0 4px 0 transparent;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

.c1:focus {
  border: 1px solid #00D9C5;
  box-shadow: 0 0 4px 0 #00D9C5;
}

.c1::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1:disabled {
  background-color: transparent;
  cursor: not-allowed;
}

<div
  class="c0"
>
  <input
    class="c1"
    name="name"
  />
</div>
`;

exports[`<InputText /> renders the component with focus 1`] = `
.c0 {
  position: relative;
}

.c1 {
  width: 100%;
  -webkit-appearance: none;
  outline: none;
  border-radius: 8px;
  height: 50px;
  padding: 0 16px;
  font-size: 15px;
  font-weight: 400;
  color: #4A545E;
  border: 1px solid #818F9B;
  box-shadow: 0 0 4px 0 transparent;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

.c1:focus {
  border: 1px solid #00D9C5;
  box-shadow: 0 0 4px 0 #00D9C5;
}

.c1::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1:disabled {
  background-color: transparent;
  cursor: not-allowed;
}

<div
  class="c0"
>
  <input
    class="c1"
    name="name"
  />
</div>
`;

exports[`<InputText /> renders the component with isValid set as true 1`] = `
.c0 {
  position: relative;
}

.c1 {
  width: 100%;
  -webkit-appearance: none;
  outline: none;
  border-radius: 8px;
  height: 50px;
  padding: 0 16px;
  font-size: 15px;
  font-weight: 400;
  color: #4A545E;
  border: 1px solid #3EBC64;
  box-shadow: 0 0 4px 0 transparent;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

.c1:focus {
  border: 1px solid #00D9C5;
  box-shadow: 0 0 4px 0 #00D9C5;
}

.c1::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1:disabled {
  background-color: transparent;
  cursor: not-allowed;
}

<div
  class="c0"
>
  <input
    class="c1"
    name="name"
  />
</div>
`;

exports[`<InputText /> renders the component with the required props 1`] = `
.c0 {
  position: relative;
}

.c1 {
  width: 100%;
  -webkit-appearance: none;
  outline: none;
  border-radius: 8px;
  height: 50px;
  padding: 0 16px;
  font-size: 15px;
  font-weight: 400;
  color: #4A545E;
  border: 1px solid #818F9B;
  box-shadow: 0 0 4px 0 transparent;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

.c1:focus {
  border: 1px solid #00D9C5;
  box-shadow: 0 0 4px 0 #00D9C5;
}

.c1::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c1:disabled {
  background-color: transparent;
  cursor: not-allowed;
}

<div
  class="c0"
>
  <input
    class="c1"
    name="name"
  />
</div>
`;
